# imway

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  STYLE.md  TASKS.md  anr_dialog.cpp  anr_dialog.h  build  build.py  build.sh  calendar.cpp  calendar.h  cm_convert.comp  color.cpp  color.h  composer.cpp  composer.h  control.cpp  control.h  crash_trace.cpp  crash_trace.h  dbus_conn.cpp  dbus_conn.h  desktop.cpp  desktop.h  desktop_chrome.cpp  desktop_chrome.h  device.cpp  device.h  device_headless.cpp  device_headless.h  device_kms.cpp  device_kms.h  device_vk.cpp  device_vk.h  dialog.h  dialog_pool.h  (+145 more)
dev/: aggregate_tests.py  boot.sh  build.sh  capture_hang.sh  run_test.py  test.py  test.sh  test_build_system.py
dev/docs/: DESIGN.md
dev/tests/: CMakeLists.txt  activation_serial.inc  client_dmabuf.c  client_err_activation_reuse.c  client_err_capture_duplicate_frame.c  client_err_capture_no_buffer.c  client_err_color_incomplete.c  client_err_commit_timing_double.c  client_err_commit_timing_exists.c  client_err_commit_timing_invalid.c  client_err_constraint_duplicate.c  client_err_data_control_used_source.c  client_err_dmabuf_already_used.c  client_err_dmabuf_dimensions.c  client_err_dmabuf_extra_plane.c  client_err_dmabuf_fd_bounds.c  client_err_dmabuf_flags.c  client_err_dmabuf_format.c  client_err_dmabuf_incomplete.c  client_err_dmabuf_invalid_fd.c  client_err_dmabuf_modifier.c  client_err_dmabuf_overflow.c  client_err_dmabuf_plane_index.c  client_err_dmabuf_plane_set.c  client_err_dmabuf_renderer_limit.c  client_err_dmabuf_zero_stride.c  client_err_dnd_accept_after_finish.c  client_err_dnd_action_mask.c  client_err_dnd_dead_source_offer.c  client_err_dnd_drag_source_selection.c  client_err_dnd_early_finish.c  client_err_dnd_finish_twice.c  client_err_dnd_icon_role.c  client_err_dnd_preferred_action.c  client_err_dnd_receive_after_finish.c  client_err_dnd_selection_offer_actions.c  client_err_dnd_selection_source_drag.c  client_err_dnd_unavailable_action.c  client_err_dnd_used_source.c  client_err_fifo_exists.c  (+645 more)
dev/vm/: common.sh  create.sh  gui.sh  run.sh  ssh.sh  stop.sh
docs/: DESIGN.md
src/: compositor.cpp  compositor.h  control.cpp  control.h  data_device.cpp  data_device.h  device.cpp  device.h  device_vk.h  dmabuf.hpp  frame_listener.h  input.cpp  input.h  input_linux.cpp  input_linux.h  input_sink.cpp  input_sink.h  kms.cpp  kms.h  kms.hpp  linux_dmabuf.cpp  linux_dmabuf.h  main.cpp  output.cpp  output.h  renderer.cpp  renderer.h  renderer.hpp  scene.cpp  scene.h  seat.cpp  seat.h  seat.hpp  seat_output.cpp  seat_output.h  server.cpp  server.h  server.hpp  util.cpp  util.h  (+8 more)
tests/: CMakeLists.txt  client_dmabuf.c  client_popup.c  client_shm.c  client_sigbus.c  client_subsurface.c  client_viewport.c  ev_smoke.cpp  headless_clipboard.sh  headless_dmabuf.sh  headless_input.sh  headless_popup.sh  headless_shm.sh  headless_sigbus.sh  headless_subsurface.sh  headless_viewport.sh  vulkan_probe.cpp  wayland_smoke.cpp
vm/: common.sh  create.sh  gui.sh  run.sh  stop.sh
vm/cloud-init/: user-data
